syntax = "proto3";

option csharp_namespace = "UserApi";

package UserApi;

service UserApi {
  rpc GetUser (GetUserRequest) returns (GetUserReply);
}

message User {
  int32 id = 1;
  string name = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserReply {
  User User = 1;
}